--- a/slides/slides/slides.html
+++ b/slides/slides/slides.html
@@ -55,7 +55,8 @@
 </div>
 <hr>
 <div class="slide-layout-title">
-	<h1>Just a Title</h1>
+	<h1>UI组件&第三方组件</h1>
+	<h1>Flexbox布局</h1>
 </div>
 <hr>
 <div class="slide-layout-title">
