--- a/slides/slides/slides.html
+++ b/slides/slides/slides.html
@@ -70,6 +70,40 @@
 </div>
 <hr>
 <div class="slide-layout-title">
+	<h1>JSX语法</h1>
+	<ul>
+		<li>
+			
+		</li>
+		<li>
+			基于flex的布局<br>
+			view默认宽度为100%<br>
+			水平居中用alignItems, 垂直居中用justifyContent<br>
+			基于flex能够实现现有的网格系统需求，且网格能够各种嵌套无bug
+		</li>
+		<li>
+			图片布局<br>
+			通过Image.resizeMode来适配图片布局，包括contain, cover, stretch<br>
+			默认不设置模式等于cover模式<br>
+			contain模式自适应宽高，给出高度值即可<br>
+			cover铺满容器，但是会做截取<br>
+			stretch铺满容器，拉伸
+		</li>
+		<li>
+			定位<br>
+			定位相对于父元素，父元素不用设置position也行<br>
+			padding 设置在Text元素上的时候会存在bug。所有padding变成了marginBottom
+		</li>
+		<li>
+			文本元素<br>
+			文字必须放在Text元素里边<br>
+			Text元素可以相互嵌套，且存在样式继承关系<br>
+			numberOfLines 需要放在最外层的Text元素上，且虽然截取了文字但是还是会占用空间
+		</li>
+	</ul>
+</div>
+<hr>
+<div class="slide-layout-title">
 	<h1>Flexbox布局</h1>
 	<ul>
 		<li>
