--- a/slides/slides/slides.html
+++ b/slides/slides/slides.html
@@ -131,6 +131,12 @@
 		<li>NavigatorIOS有很多坑:(</li>
 	</ul>
 </div>
+<hr>
+<div class="slide-layout-title">
+	<h1>相关学习资料入口</h1>
+	<p class="line_center">传送门：<a href="http://www.tuicool.com/articles/zaInUbA" target="_blank">http://www.tuicool.com/articles/zaInUbA</a></p>
+</div>
+<hr>
 <div class="slide-layout-title">
 	<h1>谢谢:)</h1>
 </div>
